# fastapi-crud

./: .gitignore  Dockerfile  README.md  db_init.sql  main.py  pyproject.toml
simplecrud/: lifespan.py  schema.py  settings.py  user_crud.py
simplecrud/database/: database_setup.py  model.py
simplecrud/health/: common_health_checks.py  health_checker.py
simplecrud/jobsimulation/: job_processor.py
simplecrud/router/: health.py  user_crud.py
simplecrud/util/: logging_util.py  secret_manager_util.py
tests/: test_user_crud.py
